--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,21 @@
 [submodule "packages/foundry/lib/solady"]
 	path = packages/foundry/lib/solady
 	url = https://github.com/vectorized/solady
+[submodule "packages/foundry/lib/v4-core"]
+	path = packages/foundry/lib/v4-core
+	url = https://github.com/uniswap/v4-core
+[submodule "packages/foundry/lib/v4-periphery"]
+	path = packages/foundry/lib/v4-periphery
+	url = https://github.com/uniswap/v4-periphery
+[submodule "packages/foundry/lib/permit2"]
+	path = packages/foundry/lib/permit2
+	url = https://github.com/uniswap/permit2
+[submodule "packages/foundry/lib/universal-router"]
+	path = packages/foundry/lib/universal-router
+	url = https://github.com/uniswap/universal-router
+[submodule "packages/foundry/lib/v3-core"]
+	path = packages/foundry/lib/v3-core
+	url = https://github.com/uniswap/v3-core
+[submodule "packages/foundry/lib/v2-core"]
+	path = packages/foundry/lib/v2-core
+	url = https://github.com/uniswap/v2-core
