--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "yarn copy-schema && next build",
     "check-types": "tsc --noEmit --incremental",
-    "dev": "next dev",
+    "copy-schema": "cp ../supersocks-api/ponder.schema.ts lib/ponder.schema.ts",
+    "dev": "yarn copy-schema && next dev",
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
     "ipfs": "NEXT_PUBLIC_IPFS_BUILD=true yarn build && yarn bgipfs upload config init -u https://upload.bgipfs.com && CID=$(yarn bgipfs upload out | grep -o 'CID: [^ ]*' | cut -d' ' -f2) && [ ! -z \"$CID\" ] && echo '🚀 Upload complete! Your site is now available at: https://community.bgipfs.com/ipfs/'$CID || echo '❌ Upload failed'",
     "lint": "next lint",
@@ -17,10 +18,14 @@
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
+    "@ponder/client": "^0.11.20",
+    "@ponder/react": "^0.11.20",
     "@rainbow-me/rainbowkit": "2.2.7",
     "@tanstack/react-query": "~5.59.15",
-    "@uniswap/sdk-core": "~5.8.2",
+    "@uniswap/sdk-core": "^7.7.2",
+    "@uniswap/universal-router-sdk": "^4.19.5",
     "@uniswap/v2-sdk": "~4.6.1",
+    "@uniswap/v4-sdk": "^1.21.4",
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
     "daisyui": "4.12.10",
@@ -28,6 +33,7 @@
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
+    "ponder": "^0.11.20",
     "qrcode.react": "~4.0.1",
     "react": "~19.0.0",
     "react-copy-to-clipboard": "~5.1.0",
