--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -29,6 +29,7 @@
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
     "daisyui": "4.12.10",
+    "hono": "^4.5.0",
     "kubo-rpc-client": "~5.0.2",
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
