--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -11,4 +11,5 @@
 # More info: https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
-
+NEXT_PUBLIC_USDC=faucet
+NEXT_PUBLIC_CHAIN_ID=31337
