--- a/packages/supersocks-api/package.json
+++ b/packages/supersocks-api/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "dotenv": "^17.0.0",
     "hono": "^4.5.0",
     "ponder": "^0.11.20",
     "viem": "^2.21.3"
