--- a/packages/foundry/package.json
+++ b/packages/foundry/package.json
@@ -16,7 +16,7 @@
     "postinstall": "shx cp -n .env.example .env",
     "lint": "make lint",
     "test": "forge test",
-    "verify": "make verify RPC_URL=${1:-localhost}"
+    "verify": "make verify RPC_URL=${1:-optimism}"
   },
   "dependencies": {
     "dotenv": "~16.3.1",
